apps/filebrowser_quantum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: filebrowser
